Missing viewport update after manual "HDRI Preview Size" input #82220

Closed
opened 2020-10-29 14:44:49 +01:00 by Ivan Perevala · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.55

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0

Short description of error
Missing preview viewport update after manual "HDRI Preview Size" input. When dragging slider everything work good. Same in 2.92.

Exact steps for others to reproduce the error

  • Default *.blend
  • Workspace -> "Shading"
  • User Preferences > Viewport > HDRI Preview Size
  • Manually enter "100"

After that look at HDRI Preview in viewport, changes only after navigation actions.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.55 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` **Short description of error** Missing preview viewport update after manual "HDRI Preview Size" input. When dragging slider everything work good. Same in 2.92. **Exact steps for others to reproduce the error** - Default *.blend - Workspace -> "Shading" - User Preferences > Viewport > HDRI Preview Size - Manually enter "100" After that look at HDRI Preview in viewport, changes only after navigation actions.
Author

Added subscriber: @ivpe

Added subscriber: @ivpe

Added subscriber: @aidankerridge

Added subscriber: @aidankerridge

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Member

@fclem: I am getting immediate updates with the following:

P1744: T82220_snippet



diff --git a/source/blender/draw/engines/eevee/eevee_lookdev.c b/source/blender/draw/engines/eevee/eevee_lookdev.c
index 5deaf4d4d68..ee1fe093afc 100644
--- a/source/blender/draw/engines/eevee/eevee_lookdev.c
+++ b/source/blender/draw/engines/eevee/eevee_lookdev.c
@@ -142,6 +142,7 @@ void EEVEE_lookdev_cache_init(EEVEE_Data *vedata,
       effects->sphere_size = sphere_size;
       effects->anchor- [x] = rect->xmax;
       effects->anchor- [x] = rect->ymin;
+      DRW_viewport_request_redraw();
       EEVEE_temporal_sampling_reset(vedata);
     }
 

However: this then has the ghosting [which I thought would be prevented from resetting the taa_sampling?]

@fclem: I am getting immediate updates with the following: [P1744: T82220_snippet](https://archive.blender.org/developer/P1744.txt) ``` diff --git a/source/blender/draw/engines/eevee/eevee_lookdev.c b/source/blender/draw/engines/eevee/eevee_lookdev.c index 5deaf4d4d68..ee1fe093afc 100644 --- a/source/blender/draw/engines/eevee/eevee_lookdev.c +++ b/source/blender/draw/engines/eevee/eevee_lookdev.c @@ -142,6 +142,7 @@ void EEVEE_lookdev_cache_init(EEVEE_Data *vedata, effects->sphere_size = sphere_size; effects->anchor- [x] = rect->xmax; effects->anchor- [x] = rect->ymin; + DRW_viewport_request_redraw(); EEVEE_temporal_sampling_reset(vedata); } ``` However: this then has the ghosting [which I thought would be prevented from resetting the taa_sampling?]

This issue was referenced by 998ae29549

This issue was referenced by 998ae295493fed2538ff2b4f5301487923a4fec3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-11-06 16:44:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82220
No description provided.